[package]
name = "sprig-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
serial2 = "0.2.7"
reqwest = { version = "0.11.22", features = ["blocking"] }
anyhow = "1.0.75"
dirs = "5.0.1"
libc = "0.2.149"
